Improve font kerning

This is the workaround proposed in comment #7 of webkit bug 92363:
https://bugs.webkit.org/show_bug.cgi?id=93263#c7